ignore propertiers intento

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /EscapeFromAtlantis/nbproject/private/
 /EscapeFromAtlantis/build/
+EscapeFromAtlantis/nbproject/private/private.properties
+*.properties
