--- a/EscapeFromAtlantis/nbproject/project.properties
+++ b/EscapeFromAtlantis/nbproject/project.properties
@@ -57,7 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=UI.GraphicsUI
+main.class=Logic.Inicializador
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
